# tldr-newsletter-slack

./: .env.example  README.md  docker-compose.yml
.github/workflows/: build-and-publish.yaml
k8s/: cronjob.yaml  deployment.yaml  postgres-deployment.yaml
tldr_newsletter_slack/: Dockerfile  app.py  pyproject.toml
tldr_newsletter_slack/tldr_newsletter_slack/: database.py  newsletter.py  slacker.py
tldr_newsletter_slack/tldr_newsletter_slack/common/: constants.py
unraid/: tldr-newsletter-slack.xml
