[tool.poetry]
name = "tldr-newsletter-slack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.35.0"
beautifulsoup4 = "^4.13.4"
flask = "^3.1.0"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
